Fix Bleeding About Us Page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,7 +15,7 @@
     padding: 0;
     background-color: var(--primary-color);
     width: 100%;
-    max-width: 1000px;
+    /* max-width: 1000px; */
 }
 
 html{
@@ -32,6 +32,8 @@ main {
     font-family: var(--paragraph-font), Arial, Helvetica, sans-serif;
 }
 
+
+
 .hero {
     margin: 10px auto;
     position: relative;
@@ -45,8 +47,8 @@ main {
     position: absolute;
     top: 0px;
     background-color: #c5c7b977;
-    margin: 1rem;
-    padding: 1rem;
+    /* margin: 1rem; */
+    width: 100%;
 }
 
 .hero img {
@@ -58,10 +60,9 @@ main {
 .hero article {
     position: absolute;
     bottom: 0px;
-    margin: 2rem;
-    padding: 2rem;
+    /* margin: 2rem; */
     background-color: #00507099;
-    
+    width: 100%;
 }
 
 .hero article img {
